--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,11 +40,7 @@ build-test:
   stage: build-test
   script: gradle clean build test buildArtifacts
   artifacts:
-    paths:
-      - bio-admin/build/libs/bio-admin-1.0.0.jar
-      - client/bio-commandline/build/libs/PTSubmit-2.0.jar
-      - scheduler/scheduler/build/libs/scheduler-1.0.0.jar
-      - scheduler/pmc-processor-task/build/libs/pmc-processor-task-1.0.0.jar
-      - scheduler/submission-releaser-task/build/libs/submission-releaser-task-1.0.0.jar
-      - submission/submission-webapp/build/libs/submission-webapp-1.0.0.jar
-      - submission/submission-handlers/build/libs/submission-handlers-1.0.0.jar
+    when: always
+    reports:
+      junit: submission/persistence-mongo/build/test-results/test/**/TEST-*.xml
+
