added dind support

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,8 @@ services:
 variables:
   DOCKER_HOST: "tcp://docker:2375"
   DOCKER_DRIVER: overlay2
+  DOCKER_TLS_CERTDIR: ""
+
 include:
   - local: '/ci/submitter.yml'
   - local: '/ci/pmc-processor.yml'
@@ -40,7 +42,11 @@ build-test:
   stage: build-test
   script: gradle clean build test buildArtifacts
   artifacts:
-    when: always
-    reports:
-      junit: submission/persistence-mongo/build/test-results/test/TEST-*.xml
-
+    paths:
+      - bio-admin/build/libs/bio-admin-1.0.0.jar
+      - client/bio-commandline/build/libs/PTSubmit-2.0.jar
+      - scheduler/scheduler/build/libs/scheduler-1.0.0.jar
+      - scheduler/pmc-processor-task/build/libs/pmc-processor-task-1.0.0.jar
+      - scheduler/submission-releaser-task/build/libs/submission-releaser-task-1.0.0.jar
+      - submission/submission-webapp/build/libs/submission-webapp-1.0.0.jar
+      - submission/submission-handlers/build/libs/submission-handlers-1.0.0.jar
