--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -58,6 +58,6 @@ app:
     environment: # Current application execution environment
     requireActivation: # Indicates whether or not, new user need activation before being used
   persistence:
-    enabledMongo: false
+    enableMongo: false
     connection: # Mongo database connection string
 
