--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,11 @@
 image: gradle:6.5.1-jdk8
+services:
+  - docker:dind
+variables:
+  DOCKER_HOST: "tcp://docker:2375"
+  DOCKER_DRIVER: overlay2
+  DOCKER_TLS_CERTDIR: ""
+
 include:
   - local: '/ci/submitter.yml'
   - local: '/ci/pmc-processor.yml'
