added mysql test container support

--- a/submission/submission-webapp/src/itest/resources/application.yml
+++ b/submission/submission-webapp/src/itest/resources/application.yml
@@ -5,6 +5,7 @@ spring:
     hibernate:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    generate-ddl: on
 
   servlet:
     multipart:
