Pivotal ID # 175163839: Mongo Submission Stats
- Implementation of the service to persist and update submission stats in Mongo
- Scripts to generate a Mongo docker container for BioStudies
- Add missing properties to the Submission Web App configuration
- Add missing properties to the local instance configuration
- Remove unnecessary step in the builder configuration

--- a/submission/submission-webapp/src/main/resources/application-local.yml
+++ b/submission/submission-webapp/src/main/resources/application-local.yml
@@ -5,6 +5,11 @@ spring:
     password: admin
     driver-class-name: com.mysql.jdbc.Driver
 
+  data:
+    mongodb:
+      database: biostudies-dev
+      uri: mongodb://root:admin@localhost:27017
+
   jpa:
     show-sql: false
     hibernate:
@@ -36,3 +41,6 @@ app:
     magicDirPath: # Absolute path to the folder to be used for the user/groups magic folders links
     environment: LOCAL
     requireActivation: false
+  persistence:
+    enableMongo: false
+    connection: mongodb://root:admin@localhost:27017
