Pivotal ID # 176779952: Mongo iTests CI
- Load the schema for the MySQL database container from a proper SQL script
- Remove unused database column

--- a/submission/submission-webapp/src/itest/resources/application.yml
+++ b/submission/submission-webapp/src/itest/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   datasource:
   jpa:
-    show-sql: true
+    show-sql: false
     hibernate:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-    generate-ddl: on
+      use-new-id-generator-mappings: false
 
   servlet:
     multipart:
