Pivotal #Id 176838189: Rename PMC mongo collections https://www.pivotaltracker.com/story/show/176838189

--- a/scheduler/pmc-processor-task/src/main/resources/application.yml
+++ b/scheduler/pmc-processor-task/src/main/resources/application.yml
@@ -4,6 +4,7 @@ app:
     path: # Interpreted according to specified mode. Path of the file, folder to load.
     temp: # directory to store submission downloaded files
     mongodb-uri: # Mongo database connection string
+    mongodb-database: # Mongo database
     bio-studies-url: # URL pointing to the BioStudies instance where the data will be submitted
     bio-studies-user: # User under whom the submissions will be made
     bio-studies-password: # Password for the specified user
