Pivotal ID # 176779952: Mongo iTests CI (#332)
* Pivotal ID # 176779952: Mongo iTests CI

- Use a Gradle property to decide whether to run the tests in Mongo or MySQL
- Run both types of integration tests in the CI
- Load the schema for the MySQL database container from a proper SQL script
- Remove unused database column

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ include:
 
 stages:
   - build-test
-  - build-artifact
+  - mysql-itest
   - auto-deploy-dev-submitter
   - auto-deploy-dev-handlers
   - deploy-dev-submitter
@@ -50,3 +50,7 @@ build-test:
       - scheduler/submission-releaser-task/build/libs/submission-releaser-task-1.0.0.jar
       - submission/submission-webapp/build/libs/submission-webapp-1.0.0.jar
       - submission/submission-handlers/build/libs/submission-handlers-1.0.0.jar
+
+mysql-itest:
+  stage: mysql-itest
+  script: gradle clean :submission:submission-webapp:itest -Pitest.mode:mysql --rerun-tasks
