--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -10,8 +10,13 @@ spring:
         url: http://biostudy-prod.ebi.ac.uk:8590
         enabled: false
 
+  data:
+    mongodb:
+      database: #Mongo Database Name
+      uri: # Mongo Database connection URL
+
   datasource:
-    url: # Database connection URL
+    url: # MySQL Database connection URL
     username:
     password:
     driver-class-name: com.mysql.jdbc.Driver
@@ -59,5 +64,3 @@ app:
     requireActivation: # Indicates whether or not, new user need activation before being used
   persistence:
     enableMongo: false
-    connection: # Mongo database connection string
-
