Pivotal ID # 176501169: FTP Folders Missing
- Create a cluster job in order to regenerate all the FTP links
- Fix ext submissions page request

--- a/scheduler/submission-releaser-task/src/main/resources/application.yml
+++ b/scheduler/submission-releaser-task/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     port: # RabbitMQ Port
 
 app:
-  mode: # Releaser mode: RELEASE, NOTIFY
+  mode: # Releaser mode: RELEASE, NOTIFY, GENERATE_FTP_LINKS
   bioStudies:
     url: # BioStudies backend URL
     user: # BioStudies manager user
