Pivotal ID # 177042374: Delete Draft After Submission (#342)
* Pivotal ID # 177042374: Delete Draft After Submission

- Use interface in the resource in order to get the proper instance based on the persistence type
- Remove any existing temporary draft after the submission is created
- Create an endpoint to perform submissions from drafts instead of submitting page tab
- Set the draft key in the submission process in order to be able to delete it once the submission is processed

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,4 +53,4 @@ build-test:
 
 mysql-itest:
   stage: mysql-itest
-  script: gradle clean :submission:submission-webapp:itest -Pitest.mode:mysql --rerun-tasks
+  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mysql --rerun-tasks
