Pivotal ID # 177267343: Validate EU-ToxRisk Submissions
- Implement collection validators
- Update the submission submitter to use them

--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -64,3 +64,5 @@ app:
     requireActivation: # Indicates whether or not, new user need activation before being used
   persistence:
     enableMongo: false
+  validator:
+    euToxRiskValidationApi: # EU-ToxRisk validation API
