Pivotal ID #177423348: PMC integration test https://www.pivotaltracker.com/story/show/177423348

--- a/scheduler/pmc-processor-task/src/main/resources/application.yml
+++ b/scheduler/pmc-processor-task/src/main/resources/application.yml
@@ -8,3 +8,6 @@ app:
     bio-studies-url: # URL pointing to the BioStudies instance where the data will be submitted
     bio-studies-user: # User under whom the submissions will be made
     bio-studies-password: # Password for the specified user
+    notificationsUrl: # URL notifications sender
+    pmcBaseUrl: "http://www.ft-loading.europepmc.org"
+
