--- a/scheduler/pmc-processor-task/src/main/resources/application.yml
+++ b/scheduler/pmc-processor-task/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 app:
   data:
     mode: # Processing mode: LOAD, PROCESS or SUBMIT
-    path: # Interpreted according to specified mode. Path of the file, folder to load.
+    loadFolder: # Interpreted according to specified mode. Path of the file, folder to load.
     temp: # directory to store submission downloaded files
     mongodb-uri: # Mongo database connection string
     mongodb-database: # Mongo database
