Pivotal ID #177413282: TSV Tables Empty First Attribute Value (#359)
* Pivotal ID #177413282: TSV Tables Empty First Attribute Value

- Ignore empty attributes in TSV deserialization
- Include submission type in JSON serialization

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ stages:
 
 build-test:
   stage: build-test
-  script: gradle clean build test buildArtifacts
+  script: gradle clean build test buildArtifacts --info
   artifacts:
     paths:
       - bio-admin/build/libs/bio-admin-1.0.0.jar
@@ -53,4 +53,4 @@ build-test:
 
 mysql-itest:
   stage: mysql-itest
-  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mysql --rerun-tasks
+  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mysql --rerun-tasks --info
