--- a/submission/submission-handlers/src/main/resources/application.yml
+++ b/submission/submission-handlers/src/main/resources/application.yml
@@ -21,6 +21,7 @@ app:
   notifications:
     smtp: smtp.ebi.ac.uk
     uiUrl: # The BioStudies UI url
+    slackUrl: # Slack notifications URL
     rt:
       host: # RT server host
       queue: # Queue used for RT notifications
