--- a/settings.gradle
+++ b/settings.gradle
@@ -34,7 +34,8 @@ include("submission:persistence-sql")
 include("submission:persistence-mongo")
 
 include("scheduler:cluster-client")
+include("scheduler:exporter-task")
 include("scheduler:pmc-processor-task")
-include("scheduler:submission-releaser-task")
 include("scheduler:scheduler")
+include("scheduler:submission-releaser-task")
 include("scheduler:task-properties")
