--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ variables:
 include:
   - local: '/ci/submitter.yml'
   - local: '/ci/pmc-processor.yml'
+  - local: '/ci/exporter.yml'
   - local: '/ci/submission-releaser.yml'
   - local: '/ci/scheduler.yml'
   - local: '/ci/bio-admin.yml'
@@ -26,6 +27,9 @@ stages:
   - deploy-dev-pmc
   - deploy-beta-pmc
   - deploy-prod-pmc
+  - deploy-dev-exporter-task
+  - deploy-beta-exporter-task
+  - deploy-prod-exporter-task
   - deploy-dev-releaser-task
   - deploy-beta-releaser-task
   - deploy-prod-releaser-task
@@ -47,6 +51,7 @@ build-test:
       - client/bio-commandline/build/libs/BioStudiesCLI-2.0.jar
       - scheduler/scheduler/build/libs/scheduler-1.0.0.jar
       - scheduler/pmc-processor-task/build/libs/pmc-processor-task-1.0.0.jar
+      - scheduler/exporter-task/build/libs/exporter-task-1.0.0.jar
       - scheduler/submission-releaser-task/build/libs/submission-releaser-task-1.0.0.jar
       - submission/submission-webapp/build/libs/submission-webapp-1.0.0.jar
       - submission/submission-handlers/build/libs/submission-handlers-1.0.0.jar
