--- a/deploy.gradle
+++ b/deploy.gradle
@@ -84,6 +84,15 @@ task updatePmcArtifact {
     finalizedBy "deployArtifact"
 }
 
+task updateExporterArtifact {
+    doFirst {
+        project.ext.artifactPath = "scheduler/exporter-task/build/libs"
+        project.ext.artifactName = "exporter-task-1.0.0.jar"
+    }
+
+    finalizedBy "deployArtifact"
+}
+
 task updateReleaserArtifact {
     doFirst {
         project.ext.artifactPath = "scheduler/submission-releaser-task/build/libs"
