--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -66,3 +66,5 @@ app:
     enableMongo: false
   validator:
     euToxRiskValidationApi: # EU-ToxRisk validation API
+mongock:
+  change-logs-scan-package: ac.uk.ebi.biostd.persistence.doc.migrations
