Pivotal ID # 178213145: Activate ArrayExpress inactive users
- Add documentation for the new endpoint
- Fix explanation for the path field in the security requests

--- a/docs/api/BioStudiesInternalAPI.yaml
+++ b/docs/api/BioStudiesInternalAPI.yaml
@@ -26,6 +26,8 @@ tags:
 paths:
   /auth/register:
     $ref: 'security/RegisterUser.yaml'
+  /auth/activate:
+    $ref: 'security/ActivateUserByEmail.yaml'
   /auth/activate/{activationKey}:
     $ref: 'security/ActivateUser.yaml'
   /auth/check-registration:
