--- a/docs/api/security/ResetPassword.yaml
+++ b/docs/api/security/ResetPassword.yaml
@@ -21,9 +21,9 @@ post:
               example: "the-instance-key"
               required: true
               type: string
-            userPath:
-              description: The user path
-              example: "/user/path"
+            path:
+              description: The path to redirect the user in the UI
+              example: "/users/password_reset"
               required: true
               type: string
             recaptcha2-response:
