--- a/docs/api/security/RegisterUser.yaml
+++ b/docs/api/security/RegisterUser.yaml
@@ -37,16 +37,16 @@ post:
               example: "the-instance-key"
               required: false
               type: string
-              userPath:
-                description: The user path
-                example: "/user/path"
-                required: false
-                type: string
-              captcha:
-                description: Re-Captcha validation string. Not required.
-                example: "recaptcha-response"
-                required: false
-                type: string
+            path:
+              description: The path to redirect the user in the UI
+              example: "/users/register"
+              required: false
+              type: string
+            captcha:
+              description: Re-Captcha validation string. Not required.
+              example: "recaptcha-response"
+              required: false
+              type: string
 
   responses:
     201:
