--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -12,13 +12,13 @@ spring:
 
   data:
     mongodb:
-      database: #Mongo Database Name
-      uri: # Mongo Database connection URL
+      database: BioStudiesMongo
+      uri: mongodb://localhost:27017/BioStudiesMongo
 
   datasource:
-    url: # MySQL Database connection URL
-    username:
-    password:
+    url: jdbc:mysql://localhost:3306/BioStudies?useSSL=false
+    username: miguel
+    password: mysql123
     driver-class-name: com.mysql.jdbc.Driver
 
   jpa:
@@ -29,10 +29,10 @@ spring:
       use-new-id-generator-mappings: false
 
   rabbitmq:
-    host: # RabbitMQ host
-    username: # RabbitMQ user
-    password: # RabbitMQ password
-    port: # RabbitMQ port
+    host: localhost
+    username: guest
+    password: guest
+    port: 5672
 
   servlet:
     multipart:
@@ -43,13 +43,13 @@ spring:
 logging:
   file:
     max-history: 7
-    name: logs/application_logs.txt
+    name: /home/miguel1/Systems/Bio-Local/logs/application_logs.txt
 
 app:
-  submissionPath: # Absolute path to the folder to be used as submission storage
-  ftpPath: # Absolute path to the folder to be used ftp hardlinks
-  tempDirPath: # Absolute of the temp folder to store files
-  instanceBaseUrl: # Instance base url e.g. http://server.ebi.ac.uk:5541
+  submissionPath: /home/miguel1/Systems/Bio-Local/submissions
+  ftpPath: /home/miguel1/Systems/Bio-Local/ftp
+  tempDirPath: /home/miguel1/Systems/Bio-Local/temp
+  instanceBaseUrl: http://localhost:8080
   fire:
     host: # FIRE host
     username: # FIRE user
@@ -57,13 +57,13 @@ app:
   security:
     captchaKey: # Captcha validation token
     checkCaptcha: false
-    tokenHash: # Token used for hash authentication
-    filesDirPath: # Absolute path to the folder to be used for the user/groups files
-    magicDirPath: #  Absolute path to create user magic folder for dropbox simple access
-    environment: # Current application execution environment
-    requireActivation: # Indicates whether or not, new user need activation before being used
+    tokenHash: 123-4-567
+    filesDirPath: /home/miguel1/Systems/Bio-Local/files
+    magicDirPath: /home/miguel1/Systems/Bio-Local/links
+    environment: DEV
+    requireActivation: false
   persistence:
-    enableMongo: false
+    enableMongo: true
   mongo:
     execute-migrations: true
     migration-package: ac.uk.ebi.biostd.persistence.doc.migrations
