--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ stages:
 
 build-test:
   stage: build-test
-  script: gradle clean build test buildArtifacts --stacktrace
+  script: gradle clean build test buildArtifacts --info
   artifacts:
     paths:
       - bio-admin/build/libs/bio-admin-1.0.0.jar
@@ -58,4 +58,4 @@ build-test:
 
 mysql-itest:
   stage: mysql-itest
-  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mysql --rerun-tasks --stacktrace
+  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mysql --rerun-tasks --info
