Pivotal ID # 177839764: FIRE FileProcessingService
- Refactor file processing services into interfaces
- Make implementations for nfs/fire files
- Rename the persistence-filesystem module in order to be more aligned with the actual module functionality
- Improve some packages and classes names

--- a/settings.gradle
+++ b/settings.gradle
@@ -29,7 +29,7 @@ include("submission:submission-handlers")
 include("submission:submission-config")
 
 include("submission:persistence-common-api")
-include("submission:persistence-common")
+include("submission:persistence-filesystem")
 include("submission:persistence-sql")
 include("submission:persistence-mongo")
 
