Pivotal ID # 179055347: Update AE Activation Email
- Update the activation workflow to activate and set up the new password as a transactional operation
- Remove unused code

--- a/docs/api/BioStudiesInternalAPI.yaml
+++ b/docs/api/BioStudiesInternalAPI.yaml
@@ -32,6 +32,8 @@ paths:
     $ref: 'security/ActivateUser.yaml'
   /auth/check-registration:
     $ref: 'security/CheckUserRegistration.yaml'
+  /auth/password/setup:
+    $ref: 'security/SetUpPassword.yaml'
   /auth/retryact:
     $ref: 'security/RetryUserActivation.yaml'
   /auth/refresh-user:
