--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -62,6 +62,10 @@ app:
     magicDirPath: #  Absolute path to create user magic folder for dropbox simple access
     environment: # Current application execution environment
     requireActivation: # Indicates whether or not, new user need activation before being used
+    instanceKeys:
+      dev: # Instance key for the submission tool DEV environment
+      beta: # Instance key for the submission tool BETA environment
+      prod: # Instance key for the submission tool PROD environment
   persistence:
     enableMongo: false
   mongo:
