--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -64,6 +64,7 @@ app:
     requireActivation: # Indicates whether or not, new user need activation before being used
   persistence:
     enableMongo: false
+    enableFire: false
   mongo:
     execute-migrations: true
     migration-package: ac.uk.ebi.biostd.persistence.doc.migrations
