--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,9 @@ stages:
   - deploy-beta-scheduler
   - deploy-prod-scheduler
   - deploy-bio-admin
-  - deploy-bio-commandline
+  - deploy-dev-bio-commandline
+  - deploy-beta-bio-commandline
+  - deploy-prod-bio-commandline
   - deploy-dev-handlers
   - deploy-beta-handlers
   - deploy-prod-handlers
