Pivotal ID # 179040289: BioStudies CLI Deployment (#452)
* Pivotal ID # 179040289: BioStudies CLI Deployment

Setup deployment per environment for the BioStudies CLI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ include:
 stages:
   - build-test
   - mysql-itest
+  - auto-deploy-dev-bio-commandline
   - auto-deploy-dev-submitter
   - auto-deploy-dev-handlers
   - deploy-dev-submitter
@@ -37,7 +38,9 @@ stages:
   - deploy-beta-scheduler
   - deploy-prod-scheduler
   - deploy-bio-admin
-  - deploy-bio-commandline
+  - deploy-dev-bio-commandline
+  - deploy-beta-bio-commandline
+  - deploy-prod-bio-commandline
   - deploy-dev-handlers
   - deploy-beta-handlers
   - deploy-prod-handlers
