Pivotal ID # 179939266: SpringBoot Admin App Registration (#461)
* Pivotal ID # 179939266: SpringBoot Admin App Registration

- Get the process id for a specific application path
- Add steps to run the integration tests in all the combinations of mongo, mysql, nfs and fire
- Set the default persistence mode in the integration tests to fire

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,8 @@ include:
 
 stages:
   - build-test
-  - mysql-itest
+  - mongo-nfs-itest
+  - mysql-nfs-itest
   - auto-deploy-dev-bio-commandline
   - auto-deploy-dev-submitter
   - auto-deploy-dev-handlers
@@ -59,6 +60,10 @@ build-test:
       - submission/submission-webapp/build/libs/submission-webapp-1.0.0.jar
       - submission/submission-handlers/build/libs/submission-handlers-1.0.0.jar
 
-mysql-itest:
-  stage: mysql-itest
-  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mysql --rerun-tasks --stacktrace
+mongo-nfs-itest:
+  stage: mongo-nfs-itest
+  script: gradle clean :submission:submission-webapp:itest -PenableFire=false --rerun-tasks --stacktrace
+
+mysql-nfs-itest:
+  stage: mysql-nfs-itest
+  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mysql -PenableFire=false --rerun-tasks --stacktrace
