Pivotal ID # 180152694: File List Validation
Create a resource that allows validating the file lists

--- a/docs/api/BioStudiesPublicAPI.yaml
+++ b/docs/api/BioStudiesPublicAPI.yaml
@@ -57,6 +57,9 @@ paths:
   /submissions/direct/async:
     $ref: 'submissions/operations/AsyncDirectSubmit.yaml'
 
+  /submissions/fileLists/validate:
+    $ref: 'submissions/fileList/ValidateFileList.yaml'
+
   /submissions/{accNo}:
     $ref: 'submissions/operations/DeleteSubmission.yaml'
   /submissions/{accNo}.json:
