--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,7 @@ stages:
 
 build-test:
   stage: build-test
-  script: gradle clean build test -x itest buildArtifacts --stacktrace
+  script: gradle clean build test -x itest -x jacocoTestCoverageVerification buildArtifacts --stacktrace
   artifacts:
     paths:
       - bio-admin/build/libs/bio-admin-1.0.0.jar
