--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,7 @@ stages:
 
 build-test:
   stage: build-test
-  script: gradle clean build test buildArtifacts --stacktrace
+  script: gradle clean build test -x itest -x jacocoTestCoverageVerification buildArtifacts --stacktrace
   artifacts:
     paths:
       - bio-admin/build/libs/bio-admin-1.0.0.jar
@@ -62,7 +62,7 @@ build-test:
 
 mongo-nfs-itest:
   stage: mongo-nfs-itest
-  script: gradle clean :submission:submission-webapp:itest -PenableFire=false --rerun-tasks --stacktrace
+  script: gradle clean :submission:submission-webapp:itest -Pitest.mode=mongo -PenableFire=false --rerun-tasks --stacktrace
 
 mysql-nfs-itest:
   stage: mysql-nfs-itest
