code review changes

--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -33,6 +33,11 @@ spring:
     username: # RabbitMQ user
     password: # RabbitMQ password
     port: # RabbitMQ port
+    listener:
+      direct:
+        prefetch: 25
+      simple:
+        prefetch: 25
 
   servlet:
     multipart:
