Pivotal ID # 180640412: PMC Links Exporter
- Add a filtering attribute to filter the submissions based on the collection
- Load and transform the submissions to generate the links
- Add the new app to the scheduler pipeline

--- a/settings.gradle
+++ b/settings.gradle
@@ -39,6 +39,7 @@ include("submission:persistence-mongo")
 
 include("scheduler:cluster-client")
 include("scheduler:exporter-task")
+include("scheduler:pmc-exporter-task")
 include("scheduler:pmc-processor-task")
 include("scheduler:scheduler")
 include("scheduler:submission-releaser-task")
