--- a/scheduler/scheduler/src/main/resources/application.yml
+++ b/scheduler/scheduler/src/main/resources/application.yml
@@ -19,6 +19,21 @@ pmc:
     mongoUri: # URI to mongo database used by the PMC import process
     loadFolder: # Folder to load .gz pmc files from
 
+  export:
+    fileName: # PMC links file name
+    outputPath: # PMC links output path
+
+    ftp:
+      host: # FTP host to publish the PMC links
+      user: # FTP user to publish the PMC links
+      password: # FTP password to publish the PMC links
+      port: # FTP port to publish the PMC links
+
+    bioStudies:
+      url: # BioStudies server to load the PMC submissions
+      user: # BioStudies user to load the PMC submissions
+      password: # BioStudies password to load the PMC submissions
+
 exporter:
   fileName: # Name of the export file
   outputPath: # Path where the export file should be placed
