--- a/submission/submission-webapp/src/itest/resources/application.yml
+++ b/submission/submission-webapp/src/itest/resources/application.yml
@@ -22,6 +22,7 @@ app:
   submissionPath:
   ftpPath:
   tempDirPath:
+  requestFilesPath:
   instanceBaseUrl: http://localhost:8080
   fire:
     host:
