Pivotal ID # 180719965: Request should not save files list content (#484)
https://www.pivotaltracker.com/story/show/180719965

--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -60,6 +60,7 @@ app:
   submissionPath: # Absolute path to the folder to be used as submission storage
   ftpPath: # Absolute path to the folder to be used ftp hardlinks
   tempDirPath: # Absolute path of the temp folder to store files
+  requestFilesPath: # Base directory absolute path where request file list are stored.
   instanceBaseUrl: # Instance base url e.g. http://server.ebi.ac.uk:5541
   fire:
     host: # FIRE host
