Pivotal ID #181076984: Submission Releaser Refactor
- Refactor the submission releaser app to use database instead of extended submission
- Add an endpoint to allow releasing submissions
- Update Java home for scheduled jobs

--- a/scheduler/scheduler/src/main/resources/application.yml
+++ b/scheduler/scheduler/src/main/resources/application.yml
@@ -34,6 +34,10 @@ releaser:
     user: # BioStudies manager user
     password: # BioStudies manager password
 
+  persistence:
+    database: # The name of the database to access the data
+    uri: # The database connection URI
+
   rabbitmq:
     host: # RabbitMQ Host
     user: # RabbitMQ User
