--- a/scheduler/scheduler/src/main/resources/application.yml
+++ b/scheduler/scheduler/src/main/resources/application.yml
@@ -19,23 +19,24 @@ pmc:
     mongoUri: # URI to mongo database used by the PMC import process
     loadFolder: # Folder to load .gz pmc files from
 
-  export:
+exporter:
+  publicOnly:
+    fileName: # Name of the export file
+    outputPath: # Path where the export file should be placed
+
+  pmc:
     fileName: # PMC links file name
     outputPath: # PMC links output path
 
-    ftp:
-      host: # FTP host to publish the PMC links
-      user: # FTP user to publish the PMC links
-      password: # FTP password to publish the PMC links
-      port: # FTP port to publish the PMC links
+  ftp:
+    host: # FTP host to publish the PMC links
+    user: # FTP user to publish the PMC links
+    password: # FTP password to publish the PMC links
+    port: # FTP port to publish the PMC links
 
-    persistence:
-      database: # The database name to access the data
-      uri: # The database connection URI
-
-exporter:
-  fileName: # Name of the export file
-  outputPath: # Path where the export file should be placed
+  persistence:
+    database: # The database name to access the data
+    uri: # The database connection URI
 
   bioStudies:
     url: # BioStudies backend URL
